<resources>

    <string name="app_name">VideoApp</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_trending">Trending</string>
    <string name="title_upload">Upload</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_library">Library</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="cancel">Cancel</string>

    <string name="sign_in_with_an_email">Sign In with an email</string>
    <string name="sign_in_with_facebook">Sign In with facebook</string>
    <string name="sign_in_with_google">Sign In with google</string>
    <string name="sign_up_with_an_email">Sign Up with an email</string>
    <string name="sign_up_with_facebook">Sign Up with facebook</string>
    <string name="sign_up_with_google">Sign Up with google</string>

    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="email">Email</string>
    <string name="confirm_email">Confirm email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>

    <string name="account_saved_successfully">Account saved successfully</string>
    <string name="account_logged_successfully">Account logged successfully</string>
    <string name="account_updated_successfully">Account updated successfully</string>
    <string name="account_deleted_successfully">Account deleted successfully</string>

    <string name="account_saved_failure">Fail to save account</string>
    <string name="account_logged_failure">Fail to log account</string>
    <string name="account_updated_failure">Fail to update account</string>
    <string name="account_deleted_failure">Fail to delete account</string>

    <string name="no_internet_connection">No internet connection</string>

    <string name="fill_all_the_fields">Fill all the fields</string>

    <string name="are_not_the_same">
        Email and Confirm email are not the same and Password and Confirm password are not the same.
    </string>

    <string name="email_and_confirm_email_are_not_the_same">
        Email and Confirm email are not the same.
    </string>

    <string name="password_and_confirm_password_are_not_the_same">
        Password and Confirm password are not the same.
    </string>

    <string name="authenticationFailed">Authentication failed.</string>
</resources>