<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_orange_color"
    tools:context=".view.activities.SignUpWithAnEmailActivity">

    <EditText
        android:id="@+id/fist_name_dark_orange_edit_text"
        android:layout_width="@dimen/edit_text_width_size"
        android:layout_height="@dimen/edit_text_height_size"
        android:background="@drawable/edit_text_rounded_shape_dark_orange_color"
        android:hint="@string/first_name"
        android:paddingStart="@dimen/padding_start_size_edit_text"
        android:paddingEnd="@dimen/padding_end_size_edit_text"
        android:textColor="@color/text_white_color"
        android:textColorHint="@color/text_white_color"
        android:layout_marginTop="@dimen/layout_margin_top_30"
        android:layout_marginBottom="@dimen/layout_margin_bottom_30"
        app:layout_constraintBottom_toTopOf="@+id/second_name_dark_orange_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/second_name_dark_orange_edit_text"
        android:layout_width="@dimen/edit_text_width_size"
        android:layout_height="@dimen/edit_text_height_size"
        android:background="@drawable/edit_text_rounded_shape_dark_orange_color"
        android:hint="@string/second_name"
        android:paddingStart="@dimen/padding_start_size_edit_text"
        android:paddingEnd="@dimen/padding_end_size_edit_text"
        android:textColor="@color/text_white_color"
        android:textColorHint="@color/text_white_color"
        android:layout_marginBottom="@dimen/layout_margin_bottom_30"
        app:layout_constraintBottom_toTopOf="@+id/email_dark_orange_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/email_dark_orange_edit_text"
        android:layout_width="@dimen/edit_text_width_size"
        android:layout_height="@dimen/edit_text_height_size"
        android:background="@drawable/edit_text_rounded_shape_dark_orange_color"
        android:hint="@string/email"
        android:paddingStart="@dimen/padding_start_size_edit_text"
        android:paddingEnd="@dimen/padding_end_size_edit_text"
        android:textColor="@color/text_white_color"
        android:textColorHint="@color/text_white_color"
        android:layout_marginBottom="@dimen/layout_margin_bottom_30"
        app:layout_constraintBottom_toTopOf="@+id/confirm_email_dark_orange_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/confirm_email_dark_orange_edit_text"
        android:layout_width="@dimen/edit_text_width_size"
        android:layout_height="@dimen/edit_text_height_size"
        android:background="@drawable/edit_text_rounded_shape_dark_orange_color"
        android:hint="@string/confirm_email"
        android:paddingStart="@dimen/padding_start_size_edit_text"
        android:paddingEnd="@dimen/padding_end_size_edit_text"
        android:textColor="@color/text_white_color"
        android:textColorHint="@color/text_white_color"
        android:layout_marginBottom="@dimen/layout_margin_bottom_30"
        app:layout_constraintBottom_toTopOf="@+id/password_dark_orange_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/password_dark_orange_edit_text"
        android:layout_width="@dimen/edit_text_width_size"
        android:layout_height="@dimen/edit_text_height_size"
        android:background="@drawable/edit_text_rounded_shape_dark_orange_color"
        android:hint="@string/password"
        android:paddingStart="@dimen/padding_start_size_edit_text"
        android:paddingEnd="@dimen/padding_end_size_edit_text"
        android:textColor="@color/text_white_color"
        android:textColorHint="@color/text_white_color"
        android:layout_marginBottom="@dimen/layout_margin_bottom_30"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password_dark_orange_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields" />

    <EditText
        android:id="@+id/confirm_password_dark_orange_edit_text"
        android:layout_width="@dimen/edit_text_width_size"
        android:layout_height="@dimen/edit_text_height_size"
        android:background="@drawable/edit_text_rounded_shape_dark_orange_color"
        android:hint="@string/confirm_password"
        android:paddingStart="@dimen/padding_start_size_edit_text"
        android:paddingEnd="@dimen/padding_end_size_edit_text"
        android:textColor="@color/text_white_color"
        android:textColorHint="@color/text_white_color"
        android:layout_marginBottom="@dimen/layout_margin_bottom_250"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/sign_in_blue_button"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_rounded_shape_dark_orange_color"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/text_white_color"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginEnd="@dimen/layout_margin_end_15"
        android:layout_marginTop="@dimen/layout_margin_top_60"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_dark_orange_edit_text" />

    <Button
        android:id="@+id/cancel_white_button"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:background="@drawable/button_rounded_shape_white_color"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/text_dark_orange_color"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/layout_margin_top_60"
        android:layout_marginStart="@dimen/layout_margin_start_15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password_dark_orange_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>