<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_app_orange_color"
    tools:context=".view.activities.SignInWithGoogleActivity">

    <EditText
        android:id="@+id/password_light_grey_edit_text"
        android:layout_width="@dimen/edit_text_width_size"
        android:layout_height="@dimen/edit_text_height_size"
        android:background="@drawable/edit_text_rounded_shape_light_grey_color"
        android:hint="@string/password"
        android:paddingStart="@dimen/padding_start_size_edit_text"
        android:paddingEnd="@dimen/padding_end_size_edit_text"
        android:textColor="@color/text_black_color"
        android:textColorHint="@color/text_black_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="Autofill,TextFields" />

    <Button
        android:id="@+id/sign_in_blue_button"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:layout_marginEnd="@dimen/layout_margin_end_15"
        android:layout_marginTop="@dimen/layout_margin_top_200"
        android:background="@drawable/button_rounded_shape_light_grey_color"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/text_black_color"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_light_grey_edit_text" />

    <Button
        android:id="@+id/cancel_black_button"
        android:layout_width="@dimen/button_width_size"
        android:layout_height="@dimen/button_height_size"
        android:layout_marginStart="@dimen/layout_margin_start_15"
        android:layout_marginTop="@dimen/layout_margin_top_200"
        android:background="@drawable/button_rounded_shape_black_color"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/text_light_grey_color"
        android:textSize="@dimen/button_text_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_light_grey_edit_text" />

</androidx.constraintlayout.widget.ConstraintLayout>